[project]
name = "cloudberry-mcp-server"
version = "0.1.0"
description = "MCP server for Apache Cloudberry database interaction"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "HashML Team", email = "hashml@hashdata.cn"},
]
maintainers = [
    {name = "Yangshengwen", email = "hashml@cloudberry.com"},
]
license = {text = "MIT"}
keywords = ["mcp", "cloudberry", "postgresql", "database", "server", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "fastmcp>=2.10.6",
    "psycopg2-binary==2.9.10",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.12.15",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/apache/cloudberry/mcp-server"
Repository = "https://github.com/apache/cloudberry"
Documentation = "https://github.com/apache/cloudberry/mcp-server/README.md"

[project.scripts]
cloudberry-server = "cbmcp.server:main"
